--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <body>
     <div id="app"></div>
+    <script>window.global = window</script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 
